--- a/tests/tests_run_hooks.yml
+++ b/tests/tests_run_hooks.yml
@@ -8,9 +8,9 @@
         dns: www.example.com
         ca: self-sign
         run_before: >
-          touch /tmp/before_cert.tmp
+          touch /etc/pki/before_cert.tmp
         run_after: >
-          touch /tmp/after_cert.tmp
+          touch /etc/pki/after_cert.tmp
   roles:
     - linux-system-roles.certificate
 
@@ -42,11 +42,11 @@
           register: cert_result
         - name: Get pre-run file timestamp
           stat:
-            path: /tmp/before_cert.tmp
+            path: /etc/pki/before_cert.tmp
           register: before_result
         - name: Get post-run file timestamp
           stat:
-            path: /tmp/after_cert.tmp
+            path: /etc/pki/after_cert.tmp
           register: after_result
         - name: Assert file created before cert
           assert:
