--- a/tests/tests_basic_ipa.yml
+++ b/tests/tests_basic_ipa.yml
@@ -3,7 +3,27 @@
   hosts: all
   become: true
   tasks:
-    - import_tasks: tasks/setup_ipa.yml
+    - name: run ipa Install
+      block:
+        - import_tasks: tasks/setup_ipa.yml
+      rescue:
+        - name: FAILURE - check entropy
+          command: cat /proc/sys/kernel/random/entropy_avail
+        - name: FAILURE - get logs for debugging
+          archive:
+            dest: /tmp/ipalogs.tgz
+            path:
+              - /var/log/messages
+              - /var/log/ipaserver-install.log
+              - /var/log/ipaclient-install.log
+              - /var/log/pki
+        - name: FAILURE - grab archive
+          fetch:
+            src: /tmp/ipalogs.tgz
+            dest: /tmp/ipalogs.tgz
+        - name: FAILURE - ipa setup failed
+          fail:
+            msg: FAILURE - ipa setup failed
 
 - name: Issue IPA signed certificate
   hosts: all
