Using full imports instead of relative for module_utils
Also changed used python3 full path in tests

--- a/tests/tasks/assert_certificate_parameters.yml
+++ b/tests/tasks/assert_certificate_parameters.yml
@@ -12,7 +12,7 @@
   pip:
     name: certreader>=0.1.1
     virtualenv: "{{ __virtualenv_path }}"
-    virtualenv_command: python3 -m venv
+    virtualenv_command: /usr/bin/python3 -m venv
 
 - name: Retrieve certificate file stats
   stat:
