--- a/meta/main.yml
+++ b/meta/main.yml
@@ -9,8 +9,7 @@ galaxy_info:
   platforms:
     - name: Fedora
       versions:
-        - 31
-        - 32
+        - all
     - name: EL
       versions:
         - 7
