--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -22,14 +22,14 @@
 - name: Install and configure required providers
   vars:
     __certificate_providers: |
-      {% set ns = namespace(unique_providers=[]) %}
+      {% set unique_providers = [] %}
       {% for item in certificate_requests %}
-      {%   set _ = ns.unique_providers.append(
+      {%   set _ = unique_providers.append(
              item.provider |
              d(__certificate_provider_default)
            ) %}
       {% endfor %}
-      {{ ns.unique_providers | unique }}
+      {{ unique_providers | unique }}
   block:
     - name: Ensure provider packages are installed
       package:
