--- a/tests/tasks/assert_certificate_parameters.yml
+++ b/tests/tasks/assert_certificate_parameters.yml
@@ -8,6 +8,13 @@
     name:
       - python3
 
+- name: Install the package, force upgrade
+  pip:
+    name: pip
+    state: latest
+    virtualenv: "{{ __virtualenv_path }}"
+    virtualenv_command: /usr/bin/python3 -m venv
+
 - name: Install certreader
   pip:
     name: certreader>=0.1.1
