Fixing some ansible-test sanity errors; suppressing the rest
- To make __init__.py empty, creating providers.py having the same
  contents of the original __init__.py file.
- Adding "#!/usr/bin/python" to certificate_request.py.
- Adding boilerplate to modules/module_utils.
- Adding format index numbers.
- Suppress import tests and validate-modules:import-error.

Cleaning up ansible-lint errors except '403': 'package-latest'

RHELPLAN-71651

--- a/tests/tasks/assert_certificate_parameters.yml
+++ b/tests/tasks/assert_certificate_parameters.yml
@@ -132,6 +132,7 @@
 
 - name: Retrieve auto-renew flag
   shell: >-
+    set -euo pipefail;
     getcert list -f {{ cert['path'] }} |
     grep 'auto-renew' |
     sed 's/^\s\+auto-renew: //g'
