tests: Install latest certmonger from updates-testing
Current Fedora certmonger has a regression with parsing `Extension::`
fields (https://pagure.io/certmonger/issue/223). This is fixed in
updates-proposed. Ensure the tests install that package to unbreak them.

--- a/tests/tests_basic_self_signed.yml
+++ b/tests/tests_basic_self_signed.yml
@@ -1,4 +1,9 @@
 ---
+- name: Setup
+  hosts: all
+  tasks:
+    - include_tasks: tasks/setup.yml
+
 - name: Issue simple self-signed certificate
   hosts: all
 
