tests: Validate certificate permissions
Without specifying `group:`, certificates ought to have tight
permissions and only be accessible to the owner.

This currently also applies to certificates with `group:`, which is
wrong -- this will be fixed in the next commit.

--- a/tests/tasks/assert_certificate_parameters.yml
+++ b/tests/tasks/assert_certificate_parameters.yml
@@ -46,6 +46,12 @@
       {{ cert['owner'] | default('root') }}:
       {{ cert['group'] | default('root') }}
 
+- name: Verify certificate permissions
+  assert:
+    that:
+      - result.stat.mode == (cert['mode'] | default('0600'))
+    fail_msg: "{{ result.stat.mode }} != {{ cert['mode'] | default('0600') }}"
+
 - name: Retrieve key file stats
   stat:
     path: "{{ cert['key_path'] }}"
