--- a/tests/tests_basic_ipa.yml
+++ b/tests/tests_basic_ipa.yml
@@ -21,6 +21,12 @@
         principal: HTTP/ipaserver.test.local@TEST.LOCAL
         ca: ipa
         group: ftp
+
+      - name: cert_with_profile
+        dns: ipaserver.test.local
+        principal: HTTP/ipaserver.test.local@TEST.LOCAL
+        ca: ipa
+        profile: caIPAserviceCert
   roles:
     - linux-system-roles.certificate
 
@@ -80,6 +86,32 @@
           - content_commitment
           - key_encipherment
           - data_encipherment
+
+      - path: /etc/pki/tls/certs/cert_with_profile.crt
+        key_path: /etc/pki/tls/private/cert_with_profile.key
+        owner: root
+        subject:
+          - name: commonName
+            oid: 2.5.4.3
+            value: ipaserver.test.local
+          - name: organizationName
+            oid: 2.5.4.10
+            value: TEST.LOCAL
+        subject_alt_name:
+          - name: DNS
+            value: ipaserver.test.local
+          - name: Universal Principal Name (UPN)
+            oid: 1.3.6.1.4.1.311.20.2.3
+            value: HTTP/ipaserver.test.local@TEST.LOCAL
+          - name: Kerberos principalname
+            oid: 1.3.6.1.5.2.2
+            value: HTTP/ipaserver.test.local@TEST.LOCAL
+        key_usage:
+          - digital_signature
+          - content_commitment
+          - key_encipherment
+          - data_encipherment
+        profile: caIPAserviceCert
   tasks:
     - name: Verify each certificate
       include_tasks: tasks/assert_certificate_parameters.yml
