--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
 # https://help.github.com/en/articles/about-code-owners
 # Default reviewers for everything
-* @seocam @pcahyna @richm @rjeffman
+* @richm @rjeffman
