System Roles should consistently use ansible_managed in configuration files it manages
bz#2044640

The certificate role needs to generate the hook scripts with the
correct `ansible_managed` string commented in the same format as
generated by the template module.  Borrowed the method from the
kernel_settings to get the ansible managed comment and updated
the base class in module_utils so that it adds the comment to
the pre and post scripts as follows.

  ==> {pre,post}-scripts/<filename>.sh <==
  #!/bin/bash
  #
  # Ansible managed
  #

  ... script ...

Signed-off-by: Noriko Hosoi <nhosoi@redhat.com>

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -140,4 +140,8 @@
     run_before: "{{ item.run_before | default(omit) }}"
     run_after: "{{ item.run_after | default(omit) }}"
     ca: "{{ item.ca | default(omit) }}"
+    ansible_managed_new: "{{ __certificate_new_header }}"
   loop: "{{ certificate_requests }}"
+  vars:
+    __certificate_new_header: "{{
+      lookup('template', 'get_ansible_managed.j2') }}"
