--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -140,8 +140,8 @@
     run_before: "{{ item.run_before | default(omit) }}"
     run_after: "{{ item.run_after | default(omit) }}"
     ca: "{{ item.ca | default(omit) }}"
-    ansible_managed_new: "{{ __certificate_new_header }}"
+    __header: "{{ __lsr_ansible_managed }}"
   loop: "{{ certificate_requests }}"
   vars:
-    __certificate_new_header: "{{
+    __lsr_ansible_managed: "{{
       lookup('template', 'get_ansible_managed.j2') }}"
