Let each test use a different certificate file name
This is part of the effort to allow CI tests run in the serialized
manner on one VM for shortening the duration of the CI tests. In
the current tests, the same certificate file path is shared and
there is no cleaning up implemented. When multiple tests run
sequentially, some attribute, e.g., the file ownership, could be
inherited from the previous tests, which could make the test fail
in the attribute verification. To avoid the false negative failure,
this commit chooses different certificate file name per test.

--- a/tests/tests_basic_ipa.yml
+++ b/tests/tests_basic_ipa.yml
@@ -11,7 +11,7 @@
 
   vars:
     certificate_requests:
-      - name: mycert
+      - name: mycert_basic_ipa
         dns: ipaserver.test.local
         principal: HTTP/ipaserver.test.local@TEST.LOCAL
         ca: ipa
@@ -29,8 +29,8 @@
   become: true
   vars:
     certificates:
-      - path: /etc/pki/tls/certs/mycert.crt
-        key_path: /etc/pki/tls/private/mycert.key
+      - path: /etc/pki/tls/certs/mycert_basic_ipa.crt
+        key_path: /etc/pki/tls/private/mycert_basic_ipa.key
         subject:
           - name: commonName
             oid: 2.5.4.3
