--- a/tests/tests_provider.yml
+++ b/tests/tests_provider.yml
@@ -3,7 +3,7 @@
   hosts: all
   vars:
     certificate_requests:
-      - name: mycert
+      - name: mycert_provider
         dns: www.example.com
         ca: self-sign
         provider: certmonger
@@ -14,8 +14,8 @@
   hosts: all
   vars:
     certificates:
-      - path: /etc/pki/tls/certs/mycert.crt
-        key_path: /etc/pki/tls/private/mycert.key
+      - path: /etc/pki/tls/certs/mycert_provider.crt
+        key_path: /etc/pki/tls/private/mycert_provider.key
         subject:
           - name: commonName
             oid: 2.5.4.3
