--- a/tests/tests_basic_self_signed.yml
+++ b/tests/tests_basic_self_signed.yml
@@ -4,7 +4,7 @@
 
   vars:
     certificate_requests:
-      - name: mycert
+      - name: mycert_basic_self_signed
         dns: www.example.com
         ca: self-sign
   roles:
@@ -14,8 +14,8 @@
   hosts: all
   vars:
     certificates:
-      - path: /etc/pki/tls/certs/mycert.crt
-        key_path: /etc/pki/tls/private/mycert.key
+      - path: /etc/pki/tls/certs/mycert_basic_self_signed.crt
+        key_path: /etc/pki/tls/private/mycert_basic_self_signed.key
         subject:
           - name: commonName
             oid: 2.5.4.3
