--- a/tests/tests_dns_ip_email.yml
+++ b/tests/tests_dns_ip_email.yml
@@ -3,7 +3,7 @@
   hosts: all
   vars:
     certificate_requests:
-      - name: mycert
+      - name: mycert_dns_ip_email
         common_name: My Certificate with SAN
         dns:
           - sub1.example.com
@@ -25,8 +25,8 @@
   hosts: all
   vars:
     certificates:
-      - path: /etc/pki/tls/certs/mycert.crt
-        key_path: /etc/pki/tls/private/mycert.key
+      - path: /etc/pki/tls/certs/mycert_dns_ip_email.crt
+        key_path: /etc/pki/tls/private/mycert_dns_ip_email.key
         subject:
           - name: commonName
             oid: 2.5.4.3
