--- a/tests/tests_key_usage_and_extended_key_usage.yml
+++ b/tests/tests_key_usage_and_extended_key_usage.yml
@@ -4,7 +4,7 @@
 
   vars:
     certificate_requests:
-      - name: mycert
+      - name: mycert_key_usage_and_extended_key_usage
         dns: www.example.com
         key_usage:
           - digitalSignature
@@ -23,8 +23,9 @@
   hosts: all
   vars:
     certificates:
-      - path: /etc/pki/tls/certs/mycert.crt
-        key_path: /etc/pki/tls/private/mycert.key
+      - path: /etc/pki/tls/certs/mycert_key_usage_and_extended_key_usage.crt
+        key_path: >-
+          /etc/pki/tls/private/mycert_key_usage_and_extended_key_usage.key
         subject:
           - name: commonName
             oid: 2.5.4.3
