--- a/tests/tests_many_self_signed.yml
+++ b/tests/tests_many_self_signed.yml
@@ -3,7 +3,7 @@
   hosts: all
   vars:
     certificate_requests:
-      - name: mycert
+      - name: mycert_many_self_signed
         dns: www.example.com
         ca: self-sign
       - name: other-cert
@@ -19,8 +19,8 @@
   hosts: all
   vars:
     certificates:
-      - path: /etc/pki/tls/certs/mycert.crt
-        key_path: /etc/pki/tls/private/mycert.key
+      - path: /etc/pki/tls/certs/mycert_many_self_signed.crt
+        key_path: /etc/pki/tls/private/mycert_many_self_signed.key
         subject:
           - name: commonName
             oid: 2.5.4.3
