--- a/tests/tests_no_auto_renew.yml
+++ b/tests/tests_no_auto_renew.yml
@@ -4,7 +4,7 @@
 
   vars:
     certificate_requests:
-      - name: mycert
+      - name: mycert_no_auto_renew
         dns: www.example.com
         ca: self-sign
         auto_renew: no
@@ -18,8 +18,8 @@
   hosts: all
   vars:
     certificates:
-      - path: /etc/pki/tls/certs/mycert.crt
-        key_path: /etc/pki/tls/private/mycert.key
+      - path: /etc/pki/tls/certs/mycert_no_auto_renew.crt
+        key_path: /etc/pki/tls/private/mycert_no_auto_renew.key
         subject:
           - name: commonName
             oid: 2.5.4.3
