--- a/tests/tests_run_hooks.yml
+++ b/tests/tests_run_hooks.yml
@@ -4,7 +4,7 @@
 
   vars:
     certificate_requests:
-      - name: mycert
+      - name: mycert_run_hooks
         dns: www.example.com
         ca: self-sign
         run_before: >
@@ -18,8 +18,8 @@
   hosts: all
   vars:
     certificates:
-      - path: /etc/pki/tls/certs/mycert.crt
-        key_path: /etc/pki/tls/private/mycert.key
+      - path: /etc/pki/tls/certs/mycert_run_hooks.crt
+        key_path: /etc/pki/tls/private/mycert_run_hooks.key
         subject:
           - name: commonName
             oid: 2.5.4.3
