support setup-snapshot.yml; support set_vars.yml
support setup-snapshot.yml - tests can use
`--setup-yml tests/setup-snapshot.yml --use-snapshot`
to create a pre-populated image to make subsequent tests faster.
support `gather_facts: false` playbooks - the role will gather
the facts it needs.
Update ansible-freeipa to use `master` branch.

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -13,3 +13,17 @@ __certificate_provider_vars:
     hooks_dirs_owner: root
     hooks_dirs_group: root
     hooks_dirs_mode: "0700"
+
+__certificate_packages:
+  - python3-pyasn1
+  - python3-cryptography
+  - python3-dbus
+
+__certificate_default_directory: /etc/pki/tls
+
+# ansible_facts required by the role
+__certificate_required_facts:
+  - distribution
+  - distribution_major_version
+  - distribution_version
+  - os_family
