--- a/tests/tests_default.yml
+++ b/tests/tests_default.yml
@@ -2,6 +2,6 @@
 ---
 - name: Ensure that the role runs with default parameters
   hosts: all
-
+  gather_facts: false  # check that the role works with this
   roles:
     - linux-system-roles.certificate
