make all tests work with gather_facts: false
Ensure tests work when using ANSIBLE_GATHERING=explicit

--- a/tests/tests_subject_complex.yml
+++ b/tests/tests_subject_complex.yml
@@ -16,6 +16,7 @@
 - name: Verify certificate
   hosts: all
   become: true
+  gather_facts: true
   vars:
     certificates:
       - path: /etc/pki/tls/certs/mycert_subject_complex.crt
