--- a/tests/tasks/assert_certificate_parameters.yml
+++ b/tests/tasks/assert_certificate_parameters.yml
@@ -15,10 +15,14 @@
     virtualenv: "{{ __virtualenv_path }}"
     virtualenv_command: /usr/bin/python3 -m venv
 
+- name: Ensure Python's cryptography is installed
+  package:
+    name: python3-cryptography
+    status: present
+
 - name: Install certreader
   pip:
     name:
-      - cryptography<35
       - certreader>=0.1.1
     virtualenv: "{{ __virtualenv_path }}"
     virtualenv_command: /usr/bin/python3 -m venv
