--- a/tests/tasks/assert_certificate_parameters.yml
+++ b/tests/tasks/assert_certificate_parameters.yml
@@ -18,7 +18,7 @@
 - name: Ensure Python's cryptography is installed
   package:
     name: python3-cryptography
-    status: present
+    state: present
 
 - name: Install certreader
   pip:
