ansible-lint 6.x fixes
Use `true`/`false` instead of `yes`/`no`
Fix spacing in braces/brackets
All tasks must be named
Documents should begin with `---`
Other cleanup

--- a/examples/no_auto_renew.yml
+++ b/examples/no_auto_renew.yml
@@ -5,7 +5,7 @@
     certificate_requests:
       - name: mycert
         dns: www.example.com
-        auto_renew: no
+        auto_renew: false
         ca: self-sign
 
   roles:
