--- a/tests/tests_include_vars_from_parent.yml
+++ b/tests/tests_include_vars_from_parent.yml
@@ -1,3 +1,4 @@
+---
 - hosts: all
   gather_facts: true
   tasks:
@@ -24,7 +25,7 @@
         versions:
           - "{{ facts['distribution_version'] }}"
           - "{{ facts['distribution_major_version'] }}"
-        separators: [ "-", "_" ]
+        separators: ["-", "_"]
         # create all variants like CentOS, CentOS_8.1, CentOS-8.1,
         # CentOS-8, CentOS-8.1
         # more formally:
@@ -37,7 +38,8 @@
           map('join') | product(versions) | map('join') | list +
           [facts['distribution'], facts['os_family']] }}"
 
-    - import_role:
+    - name: Import role
+      import_role:
         name: caller
       vars:
         roletoinclude: linux-system-roles.certificate
