--- a/tests/tests_run_hooks.yml
+++ b/tests/tests_run_hooks.yml
@@ -63,13 +63,18 @@
               {{ after_result.stat.mtime }} <
               {{ cert_result.stat.mtime }}
 
-    - name: Get the ansible_managed comment in pre/post-scripts
-      command: >-
-        find /etc/certmonger/pre-scripts /etc/certmonger/post-scripts
-        -type f -exec grep "^# Ansible managed" {} \;
-      register: _result
-      changed_when: false
+    - name: Get pre/post-scripts files
+      find:
+        paths:
+          - /etc/certmonger/pre-scripts
+          - /etc/certmonger/post-scripts
+        file_type: file
+      register: __script_files
 
-    - name: Verify the ansible_managed comment in pre/post-scripts
-      assert:
-        that: _result.stdout_lines | length == 2
+    - name: Check generated files for ansible_managed, fingerprint
+      include_tasks: tasks/check_header.yml
+      loop: "{{ __script_files.files | map(attribute='path') | list }}"
+      loop_control:
+        loop_var: __file
+      vars:
+        __fingerprint: "system_role:certificate"
