feat: Allow setting certificate and key files mode
Allow setting of certificate and key files mode attribute through the
use of the 'mode' parameter. The parameter follows Ansible's file mode
rules, accepting either strings or integer values.

Fixes #133

Signed-off-by: Rafael Jeffman <rjeffman@redhat.com>

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -106,6 +106,7 @@
     common_name: "{{ item.common_name | default(omit) }}"
     owner: "{{ item.owner | default(omit) }}"
     group: "{{ item.group | default(omit) }}"
+    mode: "{{ item.mode | default(omit) }}"
     provider: "{{ item.provider | default(omit) }}"
     principal: "{{ item.principal | default(omit) }}"
     directory: "{{ __certificate_default_directory }}"
