ci: Use supported ansible-lint action; run ansible-lint against the collection
The old ansible-community ansible-lint is deprecated.  There is a
new ansible-lint github action.  The new ansible-lint has several checks
related to ansible-test and the ignore files.  Many of our ignore settings
are not allowed any more and are required to be fixed or addressed in the
Ansible preferred way.

The python imports have to be wrapped in a try/except ImportError, and
where possible, an error must be returned from the module explaining
what was not able to be imported.

The result of this is that the .sanity files can be reduced to the
bare minimum which will greatly reduce the maintenance burden of
those files, make it easier to support newer versions of Ansible,
and make it easier to import the system roles collection into Galaxy
and Automation Hub.

`distutils.version` is deprecated, and it is a hard error in python 3.12
Instead, use `packaging.version` - unfortunately, this means having to
add a dependency on `python3-packaging` on platforms that support it -
notably, there is no python-packaging available on EL7, so fall back
to using `distutils.version` there.

The latest Ansible repo gating tests run ansible-lint against
the collection format instead of against individual roles.
We have to convert the role to collection format before running
ansible-test.

Role developers can run this locally using
`tox -e collection,ansible-lint-collection`
See https://github.com/linux-system-roles/tox-lsr/pull/125

Add `---` doc start to .markdownlint.yaml

Signed-off-by: Rich Megginson <rmeggins@redhat.com>

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -4,10 +4,12 @@
 
 __certificate_provider_default: certmonger
 
+__certificate_certmonger_packages:
+  - certmonger
+
 __certificate_provider_vars:
   certmonger:
-    packages:
-      - certmonger
+    packages: "{{ __certificate_certmonger_packages }}"
     service: certmonger
     config_dir: /etc/certmonger/
     hooks_dirs_owner: root
