--- a/tests/tasks/assert_certificate_parameters.yml
+++ b/tests/tasks/assert_certificate_parameters.yml
@@ -26,8 +26,8 @@
         use: "{{ (__certificate_is_ostree | d(false)) |
           ternary('ansible.posix.rhel_rpm_ostree', omit) }}"
       when:
-        - ansible_distribution_major_version == "7"
-        - ansible_os_family == "RedHat"
+        - ansible_facts["distribution_major_version"] == "7"
+        - ansible_facts["os_family"] == "RedHat"
 
     - name: Ensure python3 is installed
       package:
@@ -37,8 +37,8 @@
         use: "{{ (__certificate_is_ostree | d(false)) |
           ternary('ansible.posix.rhel_rpm_ostree', omit) }}"
       when:
-        - ansible_distribution_major_version != "7"
-        - ansible_os_family == "RedHat"
+        - ansible_facts["distribution_major_version"] != "7"
+        - ansible_facts["os_family"] == "RedHat"
 
     - name: Retrieve certificate file stats
       stat:
