--- a/tests/tests_subject_complex.yml
+++ b/tests/tests_subject_complex.yml
@@ -35,8 +35,8 @@
     - name: Verify certs if not CentOS/RedHat 7
       when: |
         not (
-            ansible_distribution in ['CentOS', 'RedHat'] and
-            ansible_distribution_major_version == "7"
+            ansible_facts["distribution"] in ['CentOS', 'RedHat'] and
+            ansible_facts["distribution_major_version"] == "7"
         )
       block:
         - name: Verify each certificate
